api-gateway/envoy.yaml
static_resources:
  listeners:
  - name: ingress_http
    address: { socket_address: { address: 0.0.0.0, port_value: 8080 } }
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          codec_type: AUTO
          stat_prefix: ingress_http
          route_config:
            name: local_route
            virtual_hosts:
            - name: all
              domains: ["*"]
              routes:
              - match: { prefix: "/v1/tenants/" }
                route: { cluster: inventory_svc, timeout: 30s }
              - match: { prefix: "/v1/tenants/" }
                route: { cluster: orders_svc, timeout: 30s }
          http_filters:
          - name: envoy.filters.http.grpc_json_transcoder
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.grpc_json_transcoder.v3.GrpcJsonTranscoder
              proto_descriptor: "/data/descriptors.pb"
              services: ["omnistock.inventory.v1.InventoryService","omnistock.orders.v1.OrdersService"]
              print_options: { always_print_primitive_fields: true, add_whitespace: true }
          - name: envoy.filters.http.cors
          - name: envoy.filters.http.router
  clusters:
  - name: inventory_svc
    connect_timeout: 1s
    type: STRICT_DNS
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: inventory_svc
      endpoints: [{ lb_endpoints: [{ endpoint: { address: { socket_address: { address: inventory_svc, port_value: 50051 } } } }] }]
  - name: orders_svc
    connect_timeout: 1s
    type: STRICT_DNS
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: orders_svc
      endpoints: [{ lb_endpoints: [{ endpoint: { address: { socket_address: { address: orders_svc, port_value: 50052 } } } }] }]
admin:
  address: { socket_address: { address: 0.0.0.0, port_value: 9901 } }
